--- a/peft/peft_chatglm_inference.ipynb
+++ b/peft/peft_chatglm_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3292b88c-91f0-48d2-91a5-06b0830c7e70",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,220 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6a3dddcd9df4715a4b693559cf30cff",
+       "model_id": "960e26be3cc54a609b90778ad374d001",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.32k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kdgc\\anaconda3\\envs\\transformers\\Lib\\site-packages\\huggingface_hub\\file_download.py:157: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\kdgc\\.cache\\huggingface\\hub\\models--THUDM--chatglm3-6b. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7d50b2f8aca4600a3b633a418b01ccf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "configuration_chatglm.py:   0%|          | 0.00/2.33k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A new version of the following files was downloaded from https://huggingface.co/THUDM/chatglm3-6b:\n",
+      "- configuration_chatglm.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "864dbd5ee5544f81822afe4c3b65dfd2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modeling_chatglm.py:   0%|          | 0.00/55.9k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8edc5211b8c42af8685d25dc506beed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "quantization.py:   0%|          | 0.00/14.7k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A new version of the following files was downloaded from https://huggingface.co/THUDM/chatglm3-6b:\n",
+      "- quantization.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/THUDM/chatglm3-6b:\n",
+      "- modeling_chatglm.py\n",
+      "- quantization.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f89dba9a02a4d2e9c07449ff1f968ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors.index.json:   0%|          | 0.00/21.2k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d32db065bce84718a693fbeb8d29d39f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a66011cbc50e43b083b5b556037284bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00007.safetensors:   0%|          | 0.00/1.83G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad16f423c059438b8364730264c711ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00007.safetensors:   0%|          | 0.00/1.97G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25f871016bd1405996913043b19cb9ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00007.safetensors:   0%|          | 0.00/1.93G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fbdd8ea8bdf49fa97b8c8c78801e175",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00004-of-00007.safetensors:   0%|          | 0.00/1.82G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f2446ba84ca4e5299f869c35964f74a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00005-of-00007.safetensors:   0%|          | 0.00/1.97G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c4e51d7466c4b219a164fa0506ed807",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00006-of-00007.safetensors:   0%|          | 0.00/1.93G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66b7b705e5a54383920c0c14caf3422d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00007-of-00007.safetensors:   0%|          | 0.00/1.05G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f347d31fcb5463298d6fb82456faf71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,6 +256,44 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ChatGLMForConditionalGeneration(\n",
+       "  (transformer): ChatGLMModel(\n",
+       "    (embedding): Embedding(\n",
+       "      (word_embeddings): Embedding(65024, 4096)\n",
+       "    )\n",
+       "    (rotary_pos_emb): RotaryEmbedding()\n",
+       "    (encoder): GLMTransformer(\n",
+       "      (layers): ModuleList(\n",
+       "        (0-27): 28 x GLMBlock(\n",
+       "          (input_layernorm): RMSNorm()\n",
+       "          (self_attention): SelfAttention(\n",
+       "            (query_key_value): Linear4bit(in_features=4096, out_features=4608, bias=True)\n",
+       "            (core_attention): CoreAttention(\n",
+       "              (attention_dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "            (dense): Linear4bit(in_features=4096, out_features=4096, bias=False)\n",
+       "          )\n",
+       "          (post_attention_layernorm): RMSNorm()\n",
+       "          (mlp): MLP(\n",
+       "            (dense_h_to_4h): Linear4bit(in_features=4096, out_features=27392, bias=False)\n",
+       "            (dense_4h_to_h): Linear4bit(in_features=13696, out_features=4096, bias=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (final_layernorm): RMSNorm()\n",
+       "    )\n",
+       "    (output_layer): Linear(in_features=4096, out_features=65024, bias=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -129,6 +380,80 @@
       "输入：\n",
       "类型#裙*版型#显瘦*风格#文艺*风格#简约*图案#印花*图案#撞色*裙下摆#压褶*裙长#连衣裙*裙领型#圆领\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "884a8997a42a4e6192dd2b5e6195ac3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/1.40k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3988e7ef32c348bea6865c92ac6ba32a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenization_chatglm.py:   0%|          | 0.00/13.0k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A new version of the following files was downloaded from https://huggingface.co/THUDM/chatglm3-6b:\n",
+      "- tokenization_chatglm.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33807f0c9bf94d9688ec341ed44d218b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.model:   0%|          | 0.00/1.02M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3b8ef4800f541828f186be7d6d1f550",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/3.00 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting eos_token is not supported, use the default one.\n",
+      "Setting pad_token is not supported, use the default one.\n",
+      "Setting unk_token is not supported, use the default one.\n"
+     ]
     }
    ],
    "source": [
@@ -139,16 +464,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "2d30fce1-e01f-4303-aa55-ed004eaa22a8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kdgc\\anaconda3\\envs\\transformers\\Lib\\site-packages\\bitsandbytes\\nn\\modules.py:426: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_dtype=torch.float32 (default). This will lead to slow inference or training speed.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\kdgc\\.cache\\huggingface\\modules\\transformers_modules\\THUDM\\chatglm3-6b\\6f3b58ec10f088978ae174398f9d20b6dfc71552\\modeling_chatglm.py:226: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
+      "  context_layer = torch.nn.functional.scaled_dot_product_attention(query_layer, key_layer, value_layer,\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "ChatGLM3-6B 微调前：\n",
-      "连衣裙是女孩子们最爱的单品之一，这款连衣裙采用撞色圆领设计，简洁大方，修饰脸型。衣身采用印花图案点缀，展现出优雅文艺的气质。袖子采用压褶设计，轻松遮肉显瘦，修饰臂部线条。简约的款式设计，穿着舒适，轻松百搭。\n"
+      "你好，根据你提供的关键词，我为你找到了以下内容：\n",
+      "\n",
+      "1. 裙：这是一种长度及下摆宽度的服装单品，通常由轻薄的面料制成，可以在 walking、舞蹈等场合穿着。\n",
+      "\n",
+      "2. 显瘦：这是一种服装设计的原则，旨在使穿着者的身材显得更加苗条和修长。\n",
+      "\n",
+      "3. 文艺风格：这是一种强调艺术和文化气息的服装风格，通常包括色彩柔和、图案复杂、材质柔软的服装。\n",
+      "\n",
+      "4. 简约风格：这是一种简洁、不拖泥带水的设计风格，强调的是简单、纯粹和干净。\n",
+      "\n",
+      "5. 印花：这是一种图案设计，通常使用花卉、几何图形等元素，可以在服装、家居用品等地方看到。\n",
+      "\n",
+      "6. 撞色：这是一种色彩搭配方式，通过在服装上使用对比色来制造视觉冲击。\n",
+      "\n",
+      "7. 裙下摆：这是指裙子底部的装饰，可以是褶皱、荷叶边、燃料等。\n",
+      "\n",
+      "8. 压褶：这是一种装饰性技术，通常用于在面料上形成一系列的褶皱，使裙子更具有立体感和优雅感。\n",
+      "\n",
+      "9. 裙长：这是指裙子的长度，可以是短裙、中裙、长裙等。\n",
+      "\n",
+      "10. 连衣裙：这是一种单一片式的服装，通常由上身为衣、下身为裙组成，适合各种场合穿着。\n",
+      "\n",
+      "11. 裙领型：这是指裙子的领口形状，可以是圆领、V领、U领等。\n",
+      "\n",
+      "希望这些信息对你有所帮助！\n"
      ]
     }
    ],
@@ -159,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "38b5a770-baef-4697-bb71-6088e3a43d59",
    "metadata": {},
    "outputs": [
@@ -168,7 +527,7 @@
      "output_type": "stream",
      "text": [
       "ChatGLM3-6B 微调后: \n",
-      "这款连衣裙简约的圆领设计，凸显出修长的颈部线条，而衣身采用撞色印花设计，更显俏皮甜美，而袖口和裙摆处加入压褶设计，增添层次感，更具艺术感，而裙身整体设计简约大气，彰显出优雅文艺的气质。\n"
+      "裙身采用撞色印花设计，简洁大方，彰显文艺气息。简约圆领设计，衬托出优美的颈部线条，修饰脸型。裙摆采用压褶设计，修饰腿型，优雅大方。\n"
      ]
     }
    ],
@@ -203,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
