--- a/chatglm/chatglm_inference.ipynb
+++ b/chatglm/chatglm_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "3292b88c-91f0-48d2-91a5-06b0830c7e70",
    "metadata": {},
    "outputs": [],
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "9f81454c-24b2-4072-ab05-b25f9b120ae6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25763bf7afc544329363a3c84be34bb9",
+       "model_id": "c2f8bfd62d9a4f638b0ec217e4bfb740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "d488846f-41bb-4fe6-9f09-0f392f3b39e6",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "7e4270e2-c827-450e-bf27-7cb43a97f8f7",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "6ef405cf-7d77-41a6-a07b-c6c768ee30cf",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "566ed80e-828b-4105-b6e6-49de8905c991",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "6cee217e-f276-4c2f-94e7-69afb6d541a6",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "乾卦是八卦之一，也是八宫图之一，它的卦象是由三个阳爻夹一个阴爻构成，象征着天、强、积极、刚毅等含义。乾卦的卦辞为“元、亨、利、永、唯天、初、亨”，意味着“天命”、“行健”、“健行”、“强健”等。乾卦主要反映的是天、强、积极、刚毅等特性，与事业、权力、努力、坚定等有关。在占卜中，乾卦通常被视为吉卦，预示着成功、发展、力量和财富等。\n"
+      "乾卦是《易经》中的第一卦，也是八卦之一。乾卦代表着天、强、积极、刚健等含义。乾卦是由两个阴爻夹一个阳爻构成，象征天宇广阔、强盛、积极向上、充满力量。\n",
+      "\n",
+      "乾卦的卦辞是：“天行健，君子以自强不息。”这意味着，乾卦鼓励人们要效仿天的行健，不断自强，不断前进。在现实生活中，乾卦提醒我们要积极向上，勇于面对挑战，努力奋斗，不断提升自己，以达到最终的成功。\n",
+      "\n",
+      "乾卦的六爻分别代表不同的阶段和情况，从初爻到六爻，分别对应不同的阳爻和阴爻，形成不同的组合。通过分析乾卦的六爻，可以得出不同的结论和建议，以指导我们在不同情况下的决策和行动。\n"
      ]
     }
    ],
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "id": "bbe1395f-39c2-4759-ae81-90ef3bcfae47",
    "metadata": {},
    "outputs": [
@@ -190,9 +194,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "讼卦是八卦之一，它的卦象是由两个阳爻夹一个阴爻构成，象征着诉讼、争端、矛盾和困扰等。讼卦的卦辞为“天 perspectives”、“天听”、“有罚”、“无射”，意味着“天 perspective”、“天命”、“有所罚”、“没有射箭的”等。\n",
+      "讼卦是《易经》中的第五卦，也是八卦之一。讼卦象征着诉讼、争端、诉讼cases等。它由两个阴爻夹一个阳爻构成，象征男女相互争夺，或者两个势力相互对抗。\n",
       "\n",
-      "讼卦主要反映的是矛盾、争端和困扰等，与法律、诉讼、争议、争端等有关。在占卜中，讼卦通常被视为凶卦，预示着诉讼、争端和困扰等可能会加剧，建议先和解、调解，避免进一步恶化。\n"
+      "讼卦的卦辞是：“天雷震，有雷雨。先寒后温。”这意味着，讼卦表明在争端和诉讼中，天气会先出现寒冷的天气，然后转为温和的天气。\n",
+      "\n",
+      "讼卦的六爻分别代表不同的阶段和情况，从初爻到六爻，分别对应不同的阴爻和阳爻，形成不同的组合。通过分析讼卦的六爻，可以得出不同的结论和建议，以指导我们在不同情况下的决策和行动。\n",
+      "\n",
+      "在周易中，每个卦都有其特定的含义和启示。讼卦告诉我们，在处理争端和诉讼时，要冷静、理性，避免过于冲动和激烈。同时，也要有信心和勇气，坚持自己的立场和观点，最终化解争端，达成和谐。\n"
      ]
     }
    ],
@@ -227,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "id": "9c767c67-42aa-459c-a096-e226226c359b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from peft import PeftModel, PeftConfig\n",
     "\n",
-    "epochs = 3\n",
+    "epochs = 10\n",
     "# timestamp = \"20240118_164514\"\n",
-    "timestamp = \"20240225_222843\"\n",
+    "timestamp = \"20240615_094136\"\n",
     "\n",
     "peft_model_path = f\"models/{model_name_or_path}-epoch{epochs}-{timestamp}\"\n",
     "\n",
@@ -247,14 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "24a5d22b-2c94-4dcf-8135-18d78f98755f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def compare_chatglm_results(query, base_model, qlora_model, training_tag):\n",
     "    base_response, base_history = base_model.chat(tokenizer, query)\n",
-    "\n",
     "    inputs = tokenizer(query, return_tensors=\"pt\").to(0)\n",
     "    ft_out = qlora_model.generate(**inputs, max_new_tokens=512)\n",
     "    ft_response = tokenizer.decode(ft_out[0], skip_special_tokens=True)\n",
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "id": "7db16cd5-0bb5-44ab-b861-d9ca6a4970c2",
    "metadata": {},
    "outputs": [
@@ -284,10 +291,14 @@
       "问题：解释下乾卦是什么？\n",
       "\n",
       "原始输出：\n",
-      "{'name': '乾卦是八宫图中的第一宫，也是八卦中的第一卦，由乾卦纯阳所组成，代表着天。它象征着刚健、刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。乾卦的核心哲学是：天行健，君子拟之。意思是以健健的品德行走在世界上，排除障碍，勇敢前进。', 'content': '\\n乾卦象征天，代表着刚健不阿，刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。在事业方面，乾卦代表着刚健不阿的品德，能够在事业中克服困难，取得胜利。在经商方面，乾卦象征着刚健不阿，坚韧不拔，具有刚健不阿的特质。在求名方面，乾卦代表着刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。\\n\\n总体来说，乾卦是一个具有刚健不阿的品性的卦象，象征着不阿不叛、坚贞不屈的精神，具有坚贞不阿、刚健不阿的特质。在不同的环境中，乾卦所代表的意义也有所不同，但总体上是代表着刚健不阿的品性。'}\n",
+      "在周易中，乾卦是六十四卦之首，由六个阳爻组成，象征着天。它所代表的是刚健、健行、刚健不屈的意境。乾卦的核心哲学是：天道刚健，运行不已，君子观此卦象，从而以天为法，自强不息。\n",
+      "\n",
+      "乾卦象征天，为大通而至正。得此卦者，名利双收，应把握机会，争取成果。然而，切勿过于骄傲自满，而应保持谦逊、冷静和警惕。在事业、经商、求名等方面，乾卦皆暗示着大吉大利，但也警示着必须坚持正道、修养德行，方能永远亨通。\n",
+      "\n",
+      "在婚恋方面，乾卦提示着阳盛阴衰，但也强调刚柔相济，相互补足，形成美满的结果。在决策方面，则是强调刚健、正直、公允，自强不息的实质，需要修养德行、坚定信念，方能克服困难，消除灾难。\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240615_094136）：\n",
       "[gMASK]sop 解释下乾卦是什么？ 在周易中，乾卦是六十四卦之首，由六个阳爻组成，象征着天。它所代表的是刚健、健行、刚健不屈的意境。乾卦的核心哲学是：天道刚健，运行不已，君子观此卦象，从而以天为法，自强不息。\n",
       "\n",
       "乾卦象征天，为大通而至正。得此卦者，名利双收，应把握机会，争取成果。然而，切勿过于骄傲自满，而应保持谦逊、冷静和警惕。在事业、经商、求名等方面，乾卦皆暗示着大吉大利，但也警示着必须坚持正道、修养德行，方能永远亨通。\n",
@@ -302,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "id": "7aa074bd-c819-4533-a10f-f3184dc9549a",
    "metadata": {},
    "outputs": [
@@ -313,11 +324,11 @@
       "问题：周易中的讼卦是什么\n",
       "\n",
       "原始输出：\n",
-      "{'name': 'ich möchte mich im Liede der linken Hand ergeben, um Ihnen mitzuteilen, was die Obrigkeiten der linken Hand bedeuten. Im Kiese der linken Hand findet sich das Maß für reine Rede, das den Ding und denen, denen es gilt, wissen und verstehen lassen kann. Immerwhere also immer, wenn es muss geteilt worden muss, das Maß findet die Gelegenheit, gebrachte Verantwortlichkeiten zu bergen und generell zu helfen.', 'content': '\\nDas Ergebnis der linken Hand sollte also berüftreffen, was die Gegenströme des Gutes und der Rechtspflichten ist. Solche Gelegenheiten können zu Beginn und Mitte des Rechtsverfahrens gearbeitet werden, um das Verbrechen und die Verantwortlichkeiten zu entdecken. Solche Gelegenheiten können die Rede und die Taten des linken Handes erfordern, um die Würgen und die Verantwortlichkeiten des linken Handes zu bergen.\\n\\nUm das Gefühl des linken Handes zu verstehen, muss man sich für die reine Rede engagiert und das Gefühl des linken Handes muss miterfahren. Solche Erfahrung kann man erlangen, wenn man sich für andere interesselte Sacheen engagiert, um deren reine Rede und deren Gefühl zu verstehen. Solche Erfahrung kann man erlangen, wenn man sich für andere interesselte Sacheen engagiert und das Gefühl des linken Handes miterfahren lassen muss.\\n\\nDas Ergebnis der linken Hand kann auch mit anderem bedeuten, wenn er sich für andere Dinge interesset und andere Sacheen miterfahren muss, um die reine Rede und das Gefühl des linken Handes zu verstehen. Solche Interpretation kann man u. a. mit demselben章程 (Zhonghong) des Zhoukang, dem classifier des Confucius, das mit demselben Gefühl der linken Hand assoziiert ist, erkennen.'}\n",
+      "在周易中，讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
-      "[gMASK]sop 周易中的讼卦是什么样子, 代表什么意思? 在周易中，讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n"
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240615_094136）：\n",
+      "[gMASK]sop 周易中的讼卦是什么? 在周易中，讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n"
      ]
     }
    ],
@@ -327,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "d5a31554-40f1-4e6e-8240-f207c4a61b42",
    "metadata": {},
    "outputs": [
@@ -338,10 +349,10 @@
       "问题：师卦是什么？\n",
       "\n",
       "原始输出：\n",
-      "在周易中，师卦是一个由坎卦（水）和坤卦（地）相叠而成的异卦。这一卦象代表着军队的力量和军情的总指挥，预示着吉祥无灾。象辞中描述了地中有水的情景，寓意着君子应当像大地一样容纳和畜养大众。师卦的解释强调选择德高望重的长者来统率军队，才能获得吉祥无咎。另外，师卦也象征着困难重重，需要包容别人、艰苦努力，及时行事，严于律已。在事业、经商、求名、婚恋等方面的决策中，都需要警惕潜在敌人，小心谨慎，合作与决断兼顾，方能成功。\n",
+      "师卦是一个卦象，在周易中，它由坎卦（水）和坤卦（地）相叠而成。这一卦象代表着军队的力量和军情的总指挥，预示着吉祥无灾。象辞中描述了地中有水的情景，寓意着君子应当像大地一样容纳和畜养大众。师卦的解释强调选择德高望重的长者来统率军队，才能获得吉祥无咎。另外，师卦也象征着困难重重，需要包容别人、艰苦努力，及时行事，严于律已。在事业、经商、求名、婚恋等方面的决策中，都需要警惕潜在敌人，小心谨慎，合作与决断兼顾，方能成功。\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240615_094136）：\n",
       "[gMASK]sop 师卦是什么？ 在周易中，师卦是一个由坎卦（水）和坤卦（地）相叠而成的异卦。这一卦象代表着军队的力量和军情的总指挥，预示着吉祥无灾。象辞中描述了地中有水的情景，寓意着君子应当像大地一样容纳和畜养大众。师卦的解释强调选择德高望重的长者来统率军队，才能获得吉祥无咎。另外，师卦也象征着困难重重，需要包容别人、艰苦努力，及时行事，严于律已。在事业、经商、求名、婚恋等方面的决策中，都需要警惕潜在敌人，小心谨慎，合作与决断兼顾，方能成功。\n"
      ]
     }
@@ -694,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
